# tinto

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  change-log.rst  license.rst  readme.rst
cmake/: Utils.cmake  deinstall.cmake.in
cmake/modules/: FindCUNIT.cmake  FindSN.cmake
include/: conf.h.in
res/config-sample/: icon-and-text-1.conf  icon-and-text-2.conf  icon-and-text-3.conf  icon-and-text-4.conf  icon-only-1.conf  icon-only-2.conf  icon-only-3.conf  icon-only-4.conf  icon-only-6.conf  icon-only-7.conf  text-only-1.conf  text-only-2.conf  text-only-3.conf  text-only-4.conf  text-only-5.conf  text-only-6.conf  tinto.conf
src/: CMakeLists.txt  conf.h.in  config.c  main.c  panel.c  panel.h  server.c  server.h  tint.c  tinto.c  tinto.h
src/battery/: CMakeLists.txt  battery.c  battery.h
src/clock/: CMakeLists.txt  clock.c  clock.h
src/launcher/: CMakeLists.txt  apps-common.c  desktop-entry.c  desktop-entry.h  icon-theme-common.c  launcher.c  launcher.h  xsettings-client.c
src/launcher/t/: CMakeLists.txt  desktop-entry-test.c  desktop-entry-test.h
src/systray/: CMakeLists.txt  systraybar.c
src/t/: CMakeLists.txt  main.c
src/taskbar/: CMakeLists.txt  task.c  task.h  taskbar.c  taskbar.h  taskbarname.c  taskbarname.h
src/tint2conf/: CMakeLists.txt  main.c  properties.c  properties_rw.c
src/tooltip/: CMakeLists.txt  tooltip.c  tooltip.h
src/util/: CMakeLists.txt  area.c  area.h  common.c  common.h  debug.c  debug.h  misc.c  misc.h  path-utils.c  path-utils.h  string-addins.c  string-addins.h  strnatcmp.c  timer.c  window.c  window.h
src/util/t/: CMakeLists.txt  color32-test.c  color32-test.h  dimension-test.c  dimension-test.h  path-utils-test.c  path-utils-test.h  string-addins-test.c  string-addins-test.h  test-color32.c  test-dimension.c  test-path-utils.c  test-string-addins.c
t/: CMakeLists.txt  main.c
